--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>rainware</title>
     <meta name=viewport content="width=device-width, initial-scale=1">
+    <meta content="rainware coo" property="og:description">
 
     <style>
         * {
