--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <title>rainware</title>
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <meta content="rainware coo" property="og:description">
+    <meta content="rainware" property="og:title">
+    <meta content="rainware coo script and super op? it can do some cool stuff" property="og:description">
 
     <style>
         * {
