--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>rainware</title>
     <meta name=viewport content="width=device-width, initial-scale=1">
+    <link rel="icon" href="https://media.discordapp.net/attachments/867442641591599116/987859676211314728/unknown.png">
     <meta content="rainware" property="og:title">
     <meta content="rainware coo script and super op? it can do some cool stuff" property="og:description">
 
