--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang ="en">
 <head>
@@ -46,7 +45,7 @@
 <div>
     <div>
         <h1>rainware</h1>
-<a style="font-size: 1.2vw; position: fixed; top: 53%; left: 47.5%;" target="_blank" href="https://google.com">Purchase</a>
+<a style="font-size: 1.2vw; position: fixed; top: 53%; left: 47.5%;" target="_blank" href="https://www.roblox.com/game-pass/53183196/rainware-whitelist">Purchase</a>
 <hr style="width: 25%; size: 1.8vh; position: fixed; left: 37.5%; top: 51%; background-color:white; border-color: white;" class="solid">
     </div>
 </div>
