--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang ="en">
 <head>
@@ -5,7 +6,7 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
     <link rel="icon" href="https://media.discordapp.net/attachments/867442641591599116/987859676211314728/unknown.png">
     <meta content="rainware" property="og:title">
-    <meta content="rainware coo script and super op? it can do some cool stuff" property="og:description">
+    <meta content="rainware coo script and super op?" property="og:description">
 
     <style>
         * {
@@ -46,6 +47,8 @@
     <div>
         <h1>rainware</h1>
 <a style="font-size: 1.2vw; position: fixed; top: 53%; left: 47.5%;" target="_blank" href="https://www.roblox.com/game-pass/53183196/rainware-whitelist">Purchase</a>
+<a style="font-size: 1.2vw; position: fixed; top: 53%; left: 53.5%;" target="_blank" href="https://discord.gg/tJQbfeSpPZ">Discord</a>
+<a style="font-size: 1.2vw; position: fixed; top: 53%; left: 44%;" target="_blank" href="https://google.com">TOS</a>
 <hr style="width: 25%; size: 1.8vh; position: fixed; left: 37.5%; top: 51%; background-color:white; border-color: white;" class="solid">
     </div>
 </div>
