--- a/tos.html
+++ b/tos.html
@@ -3,6 +3,9 @@
 <head>
     <title>rw TOS</title>
     <meta name=viewport content="width=device-width, initial-scale=1">
+    <link rel="icon" href="https://media.discordapp.net/attachments/867442641591599116/987859676211314728/unknown.png">
+    <meta content="rainware" property="og:title">
+    <meta content="rainware coo script and super op?" property="og:description">
 
     <style>
         * {
