--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <a style="font-size: 1.2vw; position: fixed; top: 53%; left: 45%;" target="_blank" href="https://discord.gg/tJQbfeSpPZ">Discord</a>
 <a style="font-size: 1.2vw; position: fixed; top: 53%; left: 50%;" target="_blank" href="https://azurqubs.github.io/tos">TOS</a>
 <a style="font-size: 1.2vw; position: fixed; top: 53%; left: 53.5%;" target="_blank" href="https://azurqubs.github.io/games">Games</a>
-<a style="font-size: 1.2vw; position: fixed; top: 53%; left: 58.5%;" target="_blank" href="https://google.com">FAQ</a>
+<a style="font-size: 1.2vw; position: fixed; top: 53%; left: 58.5%;" target="_blank" href="https://google.com">Info</a>
 <hr style="width: 25%; size: 1.8vh; position: fixed; left: 37.5%; top: 51%; background-color:white; border-color: white;" class="solid">
     </div>
 </div>
