--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
     <link rel="icon" href="https://media.discordapp.net/attachments/867442641591599116/987859676211314728/unknown.png">
     <meta content="rainware" property="og:title">
-    <meta content="rainware coo script and super op?" property="og:description">
+    <meta content="rainware is a super op cool and good script for the price of 1 robuc and u get some nice features for like no games but pls i need moners" property="og:description">
 
     <style>
         * {
